fix posts overlap other content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -44,7 +44,7 @@ $breakpoints: (
     position: relative;
     width: 100%;
     height: auto;
-    z-index: 2;
+    // z-index: 2;
     // .container {
     //     padding-top: 15em;
     // }
